# lark_messager

./: .dockerignore  .env  .env.example  .env.test.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TESTING.md  docker-compose.test.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: docker-image.yml
examples/: curl_examples.sh
migrations/: 001_initial.sql  002_unified_auth.sql
prompts/: frontend_prompts_records.md  prompt_records.md
scripts/: create_admin_user.sql.example  docker-entrypoint.sh  run_tests.sh
src/: auth.rs  config.rs  database.rs  error.rs  handlers.rs  lark.rs  lib.rs  logging.rs  main.rs  models.rs  routes.rs  server.rs
tests/: integration_tests.rs  unit_tests.rs
