[package]
name = "lark_messager"
version = "0.1.0"
edition = "2021"
description = "Lark messaging bot API service with unified API key authentication"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "migrate"] }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
constant_time_eq = "0.2"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
hex = "0.4"
moka = { version = "0.12", features = ["sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

[dev-dependencies]
axum-test = "15.0"
mockall = "0.12"
tempfile = "3.8"
